<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.townyadvanced</groupId>
  <artifactId>TownyResources</artifactId>
  <version>0.5.2</version>
  <name>townyresources</name> <!-- Leave lower-cased -->

  <properties>
    <java.version>17</java.version>
    <project.bukkitAPIVersion>1.15</project.bukkitAPIVersion>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <towny.version>0.98.6.3</towny.version>
  </properties>

  <repositories>
    <repository>
      <id>spigot-repo</id>
      <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
    </repository>
    <repository>
      <id>glaremasters repo</id>
      <url>https://repo.glaremasters.me/repository/towny/</url>
    </repository>
	<repository>
	  <id>jitpack.io</id>
	  <url>https://jitpack.io</url>
	</repository>
    <repository>
      <id>lang-utils-repo</id>
      <url>https://ci.nyaacat.com/maven/</url>
    </repository>
    <repository>
      <id>nexus</id>
      <name>Lumine Releases</name>
      <url>https://mvn.lumine.io/repository/maven-public/</url>
    </repository>
    <repository>
      <id>phoenix</id>
      <url>https://nexus.phoenixdevt.fr/repository/maven-public/</url>
    </repository>
  </repositories>
  
  <dependencies>
    <dependency>
      <groupId>org.spigotmc</groupId>
      <artifactId>spigot-api</artifactId>
      <version>1.19.2-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
	<dependency>
      <groupId>com.github.TownyAdvanced</groupId>
      <artifactId>Towny</artifactId>
      <version>0.98.6.3</version>
      <scope>provided</scope>
	</dependency>
    <dependency>
	  <groupId>com.github.TownyAdvanced</groupId>
	  <artifactId>SiegeWar</artifactId>
	  <version>0.9.0</version>
	  <scope>provided</scope>
	</dependency>
    <dependency>
      <groupId>com.meowj</groupId>
      <artifactId>LangUtils</artifactId>
  	  <version>2.5-SNAPSHOT</version>
	  <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.TheBusyBiscuit</groupId>
      <artifactId>Slimefun4</artifactId>
      <version>RC-27</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>io.lumine.xikage</groupId>
      <artifactId>MythicMobs</artifactId>
      <version>4.9.1</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>io.lumine</groupId>
      <artifactId>Mythic-Dist</artifactId>
      <version>5.1.2</version>  
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>io.lumine</groupId>
      <artifactId>MythicLib-dist</artifactId>
      <version>1.5.1-SNAPSHOT</version>  
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>net.Indyuce</groupId>
      <artifactId>MMOItems-API</artifactId>
      <version>6.9.2-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>com.github.bsideup.jabel</groupId>
      <artifactId>jabel-javac-plugin</artifactId>
      <version>1.0.0</version>
      <scope>provided</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.10.1</version>
        <configuration>
          <release>8</release>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <compilerArgs>
            <arg>-Xplugin:jabel</arg>
          </compilerArgs>
        </configuration>
      </plugin>
    </plugins>
    <resources>
      <resource>
        <directory>src/main/resources</directory>
        <filtering>true</filtering>
      </resource>
    </resources>
  </build>

  <profiles>
    <profile>
      <id>intellij-idea-only</id>
      <activation>
        <property>
          <name>idea.maven.embedder.version</name>
        </property>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
              <release>${java.version}</release>
              <compilerArgs>
                <arg>--enable-preview</arg>
              </compilerArgs>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>
</project>
